--- a/src/Components/Carousel/style.css
+++ b/src/Components/Carousel/style.css
@@ -1,28 +1,39 @@
-.slick-list {
+.carousel-box {
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 80vh;
   width: 100%;
   position: relative;
 }
-.para {
-  font-size: 4rem;
+
+.details-box {
+  width: 100%;
+  text-align: center;
   position: absolute;
-  top: 40vh;
-  left: 20vw;
+  bottom: 100px;
+  transform: translate(0, -50%);
   color: white;
-  font-weight: 700;
-  font-style: italic;
 }
+
+.details-box h1 {
+  font-size: 45px;
+  font-style: italic;
+  margin-bottom: 12px;
+  font-weight: bolder;
+}
+
+.details-box p {
+  font-size: 16px;
+  font-weight: 1000;
+}
+
 .btns {
-  font-size: 2rem;
-  position: absolute;
-  top: 60vh;
-  left: 45vw;
+  font-size: 1rem;
   color: white;
   background-color: black;
-  font-weight: 400;
-  height: 70px;
-  border-radius: 50px;
-  padding: 15px;
+  font-weight: 500;
+  border-radius: 27px;
+  padding: 12px 35px;
 }
 .btns:hover{
     background-color: white;
