--- a/src/Components/ImageCom/style.css
+++ b/src/Components/ImageCom/style.css
@@ -1,4 +1,4 @@
-.image-box{
+.image-box {
     display: flex;
     flex-flow: row;
     width: 95%;
@@ -6,23 +6,25 @@
     justify-content: space-between;
     align-items: flex-start;
 }
-.bigger{
+
+.bigger {
     width: 48%;
     overflow: hidden;
     position: relative;
+    transition: transform 0.6s cubic-bezier(0.2, 0.6, 0.4, 1);
 }
-.bigger img{
+
+.bigger img {
     width: 100%;
     height: 635px;
     object-fit: fill;
-    overflow: hidden;
-    transition: transform 0.6s cubic-bezier(0.2, 0.6, 0.4, 1);
-}
-.bigger img:hover, .s1 img:hover{
-   scale: 1.5;
 }
 
-.bigger p, .s1 p{
+.bigger:hover {
+    transform: scale(1.5); /* Scale on hover */
+}
+
+.bigger p {
     position: absolute;
     bottom: 50px;
     left: 50%;
@@ -32,21 +34,26 @@
     font-weight: 400;
     z-index: 10;
 }
-.smaller{
+
+.smaller {
     display: flex;
     flex-flow: column;
     width: 48%;
     gap: 5px;
-    
 }
-.s1{
+
+.s1 {
     overflow: hidden;
     position: relative;
+    transition: transform 0.6s cubic-bezier(0.2, 0.6, 0.4, 1);
 }
-.s1 img{
+
+.s1 img {
     width: 100%;
     height: 315px;
     object-fit: cover;
-    overflow: hidden;
-    transition: transform 0.6s cubic-bezier(0.2, 0.6, 0.4, 1);
+}
+
+.s1:hover {
+    transform: rotate(10deg); /* Rotate on hover */
 }
